src/frontend/styles/components/calltrace.styl
/* ... */
      float: left
      width: 99%
      margin-left: 10px * i
      display: inline-flex

.value-expanded-atom
  position: relative
  display: flex
  padding-left: 10px
// &.atom-even



.value-expanded-atom-parent
  display: flex
  flex-direction: row

.value-expanded-compound-parent
  display: flex
  flex-direction: column

.value-expanded-compound
  display: flex
  flex-direction: column

.value-expanded
  width: 100%
  display: flex
  flex-direction: column
  overflow: visible /*hidden*/
  position: relative
  // margin-top: 2.5px

.value-history-button
  display: block
  width: 10px
  font-size: 10px
  color: yellow
  float: right
  margin-right: 10px
// visibility: hidden

/*.value-history-button:hover */
/*  visibility: visible */

.atom-even
  // background-color: BACKGROUND_COLOR
  color: COLOR

.atom-odd
  // background-color: BACKGROUND_COLOR
  color: COLOR

.chevron
  color: TEXT_CONTENT_COLOR
  cursor: pointer
  position: absolute

  &::before
    border-style: solid
    border-width: 0.1em 0.1em 0 0
    content: ''
    display: inline-block
    height: 0.45em
    left: -5px
    position: absolute
    top: 0.15em
    transform: rotate(135deg)
    vertical-align: top
    width: 0.45em

#chevron-container
  margin-bottom: 10px
  margin-left: 10px
  margin-right: 10px
  position: relative


//   &.bottom:before
//     top: 0
//     transform: rotate(135deg)

.value-components-container
  overflow-y: scroll
  position: relative
  height: 100%
  // margin-left: 2px
  // margin: 5px
  // margin-right: -5px

  .line-chart
    height: 200px

.value-expanded-text, .value-expand
  color: VALUE_RESULT_COLOR
  cursor: pointer
  display: contents
  position: absolute
  width: 95%
  overflow: hidden
  white-space: nowrap
  text-overflow: ellipsis

.list-name
  width: 50%
  float: left

.calltrace-editor-call
  border: 1px solid COLOR
  height: 120px
  color: COLOR

  .code-editor
    height: 100px


#gdb-evaluate
  font-size: 14px
  color: COLOR

.local-calltrace-view
  .event-selected
    padding-right: 8px

.event-selected
  background: SELECTED_BACKGROUND_COLOR !important

.code-state-line
  color:TEXT_CONTENT_COLOR
  margin-left: 1.5em
  margin-bottom: .5em

.call-search-results
  height: 10ch
  overflow: scroll
  background-color: TRACEPOINT_BACKGROUND_COLOR
  margin-left: 1.5ch

.call-search-results, .search-result
  color: COLOR !important
  cursor: pointer
  text-decoration: none
  padding-left: 0.5em

.empty-search-result
  color: red
  text-align: center
  white-space: break-spaces

.active-call-location
  width: 4px
  height: 4px
  background-image: url(CALLTRACE_ACTIVE_DOT_IMG) !important
  background-size: cover;
  background-position: center;
  display: block;
  position: relative
  bottom: -10px
  left: 3px
  top: 18px
        

